--- a/Aquarium.csproj
+++ b/Aquarium.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="anModelLoader.cs" />
     <Compile Include="Aquarium.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -74,10 +75,12 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="LIMB.cs" />
     <Compile Include="ParamsForThread.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextureLoader.cs" />
+    <Compile Include="TexturesForObject.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
