--- a/Aquarium.csproj
+++ b/Aquarium.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="anModelLoader.cs" />
     <Compile Include="Aquarium.cs" />
+    <Compile Include="Explosion.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +78,7 @@
     </Compile>
     <Compile Include="LIMB.cs" />
     <Compile Include="ParamsForThread.cs" />
+    <Compile Include="Particle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextureLoader.cs" />
