add fractal romb scene

--- a/Aquarium.csproj
+++ b/Aquarium.csproj
@@ -76,7 +76,16 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form3.Designer.cs">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FractalRomb.cs" />
+    <Compile Include="Layer.cs" />
     <Compile Include="LIMB.cs" />
+    <Compile Include="MyBrush.cs" />
     <Compile Include="ParamsForThread.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="Program.cs" />
@@ -88,6 +97,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form3.resx">
+      <DependentUpon>Form3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
